syntax = "proto3";

option go_package = "shukubota/go-api-template/grpc-example";
option java_multiple_files = true;
option java_package = "io.shukubota.go-api-template.grpc-example";
option java_outer_classname = "Hello";

package hello;

service Greeter {
  rpc SayHello (HelloRequest) returns (HelloReply);
  rpc SayHelloBiDirectionalStream (stream HelloRequest) returns (stream HelloReply);
  rpc SayHelloServerStream (HelloRequest) returns (stream HelloReply);
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}